adding text editor and category search thing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -69,3 +69,24 @@ main {
     content: "\f00d";
     margin-right: 1rem;
 }
+
+/** These are specific for the tag that will be added to the rich text content */
+.trix-content .attachment-gallery > .attachment,
+.trix-content .attachment-gallery > rich-text-attachment {
+    flex: 1 0 33%;
+    padding: 0 0.5em;
+    max-width: 33%;
+}
+
+.trix-content .attachment-gallery.attachment-gallery--2 > .attachment,
+.trix-content .attachment-gallery.attachment-gallery--2 > rich-text-attachment,
+.trix-content .attachment-gallery.attachment-gallery--4 > .attachment,
+.trix-content .attachment-gallery.attachment-gallery--4 > rich-text-attachment {
+    flex-basis: 50%;
+    max-width: 50%;
+}
+
+.trix-content rich-text-attachment .attachment {
+    padding: 0 !important;
+    max-width: 100% !important;
+}
